fix: background not covering full body height

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,16 +29,12 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+
 
 body {
-  background: var(--background);
+  background: hsl(0, 61%, 27%);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   height: 100vh;
+
 }
